# Deeplearning-Cardiovascular-Detection-System

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: predict.py  simulate.py  train.py
src/cvd_risk/: __init__.py  config.py  data.py  model.py  predict.py  simulate.py  train.py
tests/: test_smoke.py
