[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deeplearning-cardiovascular-detection-system"
version = "0.1.0"
description = "Hybrid deep learning system for early cardiovascular disease risk prediction"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  {name = "Ajitesh Sharma"}
]
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
